# aidlc-workflows

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  biome.json  knip.json  package.json  pyproject.toml  roadmap.md  tsconfig.adapters.json  tsconfig.json  tsconfig.tests.json  v1-migration-decisions.md  zensical.toml
.github/workflows/: ci.yml  codebuild.yml  codeql.yml  docs.yml  pull-request-lint.yml  release-pr.yml  release.yml  security-scanners.yml  tag-on-merge.yml
core/agents/: aidlc-architect-agent.md  aidlc-architecture-reviewer-agent.md  aidlc-aws-platform-agent.md  aidlc-compliance-agent.md  aidlc-composer-agent.md  aidlc-delivery-agent.md  aidlc-design-agent.md  aidlc-developer-agent.md  aidlc-devsecops-agent.md  aidlc-operations-agent.md  aidlc-pipeline-deploy-agent.md  aidlc-product-agent.md  aidlc-product-lead-agent.md  aidlc-quality-agent.md
core/aidlc-common/: conductor.md
core/hooks/: aidlc-runtime-compile.ts  aidlc-statusline.ts  aidlc-stop.ts
core/scopes/: aidlc-bugfix.md  aidlc-infra.md  aidlc-poc.md  aidlc-security-patch.md
core/sensors/: aidlc-linter.md  aidlc-required-sections.md  aidlc-type-check.md  aidlc-upstream-coverage.md
core/templates/: onboarding.md
core/tools/: aidlc-lib.ts  (+16 more)
docs/: README.md  WORKING-WITH-AIDLC.md
scripts/: build-binaries.ts  contribution-schema.ts  docs-rewrite-links.ts  extension-types.ts  extension-validate.ts  install.ps1  install.sh  manifest-types.ts  onboarding.ts  package-release.ts  package.ts
scripts/aidlc-designreview/: pyproject.toml
tests/: .coverage-ratchet.json  .coverage-registry.json  run-tests.ts  tsconfig.json
(+797 files in other folders)
