[project]
name = "design-reviewer"
version = "0.1.0"
description = "AI-powered design review tool for AIDLC projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "AIDLC Team"}
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0,<3.0",
    "boto3>=1.35.0",
    "strands-agents>=0.1.0",
    "backoff>=2.2.0",
    "rich>=13.7",
    "mistune>=3.2.1",
    "markdown-it-py>=3.0",
    "charset-normalizer>=3.0",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.scripts]
design-reviewer = "design_reviewer.cli.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto>=5.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["src/design_reviewer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
